parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    WHILE
    PRINT
    ELSE
    IF

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statement statements
Rule 3     statement -> VARNAME EQUALS expression SEMI
Rule 4     statement -> expression
Rule 5     statement -> LCURL statements RCURL
Rule 6     expression -> string_expression
Rule 7     expression -> list
Rule 8     expression -> expression PLUS expression
Rule 9     expression -> expression MINUS expression
Rule 10    expression -> expression MULT expression
Rule 11    expression -> expression DIVIDE expression
Rule 12    expression -> expression MODULO expression
Rule 13    expression -> expression EXP expression
Rule 14    expression -> expression FLDIV expression
Rule 15    expression -> expression AND expression
Rule 16    expression -> expression OR expression
Rule 17    expression -> NOT expression
Rule 18    expression -> expression LESST expression
Rule 19    expression -> expression GREATERT expression
Rule 20    expression -> expression LESSEQ expression
Rule 21    expression -> expression GREATEREQ expression
Rule 22    expression -> expression EQUALTO expression
Rule 23    expression -> expression NOTEQ expression
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    expression -> NUMBER
Rule 26    expression -> VARNAME
Rule 27    expression -> list LBRACK expression RBRACK
Rule 28    expression -> string_expression LBRACK expression RBRACK
Rule 29    list -> LBRACK list_item RBRACK
Rule 30    list -> LBRACK RBRACK
Rule 31    list_item -> list_item COMMA list_item
Rule 32    list_item -> expression
Rule 33    string_expression -> string_expression PLUS string_expression
Rule 34    string_expression -> STRING
Rule 35    expression -> expression IN list
Rule 36    expression -> string_expression IN string_expression

Terminals, with rules where they appear

AND                  : 15
COMMA                : 31
DIVIDE               : 11
ELSE                 : 
EQUALS               : 3
EQUALTO              : 22
EXP                  : 13
FLDIV                : 14
GREATEREQ            : 21
GREATERT             : 19
IF                   : 
IN                   : 35 36
LBRACK               : 27 28 29 30
LCURL                : 5
LESSEQ               : 20
LESST                : 18
LPAREN               : 24
MINUS                : 9
MODULO               : 12
MULT                 : 10
NOT                  : 17
NOTEQ                : 23
NUMBER               : 25
OR                   : 16
PLUS                 : 8 33
PRINT                : 
RBRACK               : 27 28 29 30
RCURL                : 5
RPAREN               : 24
SEMI                 : 3
STRING               : 34
VARNAME              : 3 26
WHILE                : 
error                : 

Nonterminals, with rules where they appear

expression           : 3 4 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 18 18 19 19 20 20 21 21 22 22 23 23 24 27 28 32 35
list                 : 7 27 35
list_item            : 29 31 31
statement            : 1 2
statements           : 2 5 0
string_expression    : 6 28 33 33 36 36

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . VARNAME EQUALS expression SEMI
    (4) statement -> . expression
    (5) statement -> . LCURL statements RCURL
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    VARNAME         shift and go to state 3
    LCURL           shift and go to state 11
    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 5
    string_expression              shift and go to state 6
    statement                      shift and go to state 4
    statements                     shift and go to state 12

state 1

    (7) expression -> list .
    (27) expression -> list . LBRACK expression RBRACK

  ! shift/reduce conflict for LBRACK resolved as shift
    PLUS            reduce using rule 7 (expression -> list .)
    MINUS           reduce using rule 7 (expression -> list .)
    MULT            reduce using rule 7 (expression -> list .)
    DIVIDE          reduce using rule 7 (expression -> list .)
    MODULO          reduce using rule 7 (expression -> list .)
    EXP             reduce using rule 7 (expression -> list .)
    FLDIV           reduce using rule 7 (expression -> list .)
    AND             reduce using rule 7 (expression -> list .)
    OR              reduce using rule 7 (expression -> list .)
    LESST           reduce using rule 7 (expression -> list .)
    GREATERT        reduce using rule 7 (expression -> list .)
    LESSEQ          reduce using rule 7 (expression -> list .)
    GREATEREQ       reduce using rule 7 (expression -> list .)
    EQUALTO         reduce using rule 7 (expression -> list .)
    NOTEQ           reduce using rule 7 (expression -> list .)
    IN              reduce using rule 7 (expression -> list .)
    RBRACK          reduce using rule 7 (expression -> list .)
    COMMA           reduce using rule 7 (expression -> list .)
    VARNAME         reduce using rule 7 (expression -> list .)
    LCURL           reduce using rule 7 (expression -> list .)
    NOT             reduce using rule 7 (expression -> list .)
    LPAREN          reduce using rule 7 (expression -> list .)
    NUMBER          reduce using rule 7 (expression -> list .)
    STRING          reduce using rule 7 (expression -> list .)
    $end            reduce using rule 7 (expression -> list .)
    RPAREN          reduce using rule 7 (expression -> list .)
    RCURL           reduce using rule 7 (expression -> list .)
    SEMI            reduce using rule 7 (expression -> list .)
    LBRACK          shift and go to state 13

  ! LBRACK          [ reduce using rule 7 (expression -> list .) ]


state 2

    (24) expression -> LPAREN . expression RPAREN
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 14
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 15
    string_expression              shift and go to state 6

state 3

    (3) statement -> VARNAME . EQUALS expression SEMI
    (26) expression -> VARNAME .

    EQUALS          shift and go to state 16
    PLUS            reduce using rule 26 (expression -> VARNAME .)
    MINUS           reduce using rule 26 (expression -> VARNAME .)
    MULT            reduce using rule 26 (expression -> VARNAME .)
    DIVIDE          reduce using rule 26 (expression -> VARNAME .)
    MODULO          reduce using rule 26 (expression -> VARNAME .)
    EXP             reduce using rule 26 (expression -> VARNAME .)
    FLDIV           reduce using rule 26 (expression -> VARNAME .)
    AND             reduce using rule 26 (expression -> VARNAME .)
    OR              reduce using rule 26 (expression -> VARNAME .)
    LESST           reduce using rule 26 (expression -> VARNAME .)
    GREATERT        reduce using rule 26 (expression -> VARNAME .)
    LESSEQ          reduce using rule 26 (expression -> VARNAME .)
    GREATEREQ       reduce using rule 26 (expression -> VARNAME .)
    EQUALTO         reduce using rule 26 (expression -> VARNAME .)
    NOTEQ           reduce using rule 26 (expression -> VARNAME .)
    IN              reduce using rule 26 (expression -> VARNAME .)
    VARNAME         reduce using rule 26 (expression -> VARNAME .)
    LCURL           reduce using rule 26 (expression -> VARNAME .)
    NOT             reduce using rule 26 (expression -> VARNAME .)
    LPAREN          reduce using rule 26 (expression -> VARNAME .)
    NUMBER          reduce using rule 26 (expression -> VARNAME .)
    STRING          reduce using rule 26 (expression -> VARNAME .)
    LBRACK          reduce using rule 26 (expression -> VARNAME .)
    RCURL           reduce using rule 26 (expression -> VARNAME .)
    $end            reduce using rule 26 (expression -> VARNAME .)


state 4

    (1) statements -> statement .
    (2) statements -> statement . statements
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . VARNAME EQUALS expression SEMI
    (4) statement -> . expression
    (5) statement -> . LCURL statements RCURL
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    $end            reduce using rule 1 (statements -> statement .)
    RCURL           reduce using rule 1 (statements -> statement .)
    VARNAME         shift and go to state 3
    LCURL           shift and go to state 11
    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 5
    string_expression              shift and go to state 6
    statement                      shift and go to state 4
    statements                     shift and go to state 17

state 5

    (4) statement -> expression .
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . MULT expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MODULO expression
    (13) expression -> expression . EXP expression
    (14) expression -> expression . FLDIV expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (18) expression -> expression . LESST expression
    (19) expression -> expression . GREATERT expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . GREATEREQ expression
    (22) expression -> expression . EQUALTO expression
    (23) expression -> expression . NOTEQ expression
    (35) expression -> expression . IN list

    VARNAME         reduce using rule 4 (statement -> expression .)
    LCURL           reduce using rule 4 (statement -> expression .)
    NOT             reduce using rule 4 (statement -> expression .)
    LPAREN          reduce using rule 4 (statement -> expression .)
    NUMBER          reduce using rule 4 (statement -> expression .)
    STRING          reduce using rule 4 (statement -> expression .)
    LBRACK          reduce using rule 4 (statement -> expression .)
    $end            reduce using rule 4 (statement -> expression .)
    RCURL           reduce using rule 4 (statement -> expression .)
    PLUS            shift and go to state 31
    MINUS           shift and go to state 22
    MULT            shift and go to state 32
    DIVIDE          shift and go to state 29
    MODULO          shift and go to state 27
    EXP             shift and go to state 33
    FLDIV           shift and go to state 24
    AND             shift and go to state 30
    OR              shift and go to state 25
    LESST           shift and go to state 19
    GREATERT        shift and go to state 21
    LESSEQ          shift and go to state 26
    GREATEREQ       shift and go to state 23
    EQUALTO         shift and go to state 20
    NOTEQ           shift and go to state 18
    IN              shift and go to state 28


state 6

    (6) expression -> string_expression .
    (28) expression -> string_expression . LBRACK expression RBRACK
    (36) expression -> string_expression . IN string_expression
    (33) string_expression -> string_expression . PLUS string_expression

  ! shift/reduce conflict for LBRACK resolved as shift
  ! shift/reduce conflict for IN resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
    MINUS           reduce using rule 6 (expression -> string_expression .)
    MULT            reduce using rule 6 (expression -> string_expression .)
    DIVIDE          reduce using rule 6 (expression -> string_expression .)
    MODULO          reduce using rule 6 (expression -> string_expression .)
    EXP             reduce using rule 6 (expression -> string_expression .)
    FLDIV           reduce using rule 6 (expression -> string_expression .)
    AND             reduce using rule 6 (expression -> string_expression .)
    OR              reduce using rule 6 (expression -> string_expression .)
    LESST           reduce using rule 6 (expression -> string_expression .)
    GREATERT        reduce using rule 6 (expression -> string_expression .)
    LESSEQ          reduce using rule 6 (expression -> string_expression .)
    GREATEREQ       reduce using rule 6 (expression -> string_expression .)
    EQUALTO         reduce using rule 6 (expression -> string_expression .)
    NOTEQ           reduce using rule 6 (expression -> string_expression .)
    RBRACK          reduce using rule 6 (expression -> string_expression .)
    COMMA           reduce using rule 6 (expression -> string_expression .)
    VARNAME         reduce using rule 6 (expression -> string_expression .)
    LCURL           reduce using rule 6 (expression -> string_expression .)
    NOT             reduce using rule 6 (expression -> string_expression .)
    LPAREN          reduce using rule 6 (expression -> string_expression .)
    NUMBER          reduce using rule 6 (expression -> string_expression .)
    STRING          reduce using rule 6 (expression -> string_expression .)
    $end            reduce using rule 6 (expression -> string_expression .)
    RPAREN          reduce using rule 6 (expression -> string_expression .)
    RCURL           reduce using rule 6 (expression -> string_expression .)
    SEMI            reduce using rule 6 (expression -> string_expression .)
    LBRACK          shift and go to state 34
    IN              shift and go to state 35
    PLUS            shift and go to state 36

  ! PLUS            [ reduce using rule 6 (expression -> string_expression .) ]
  ! IN              [ reduce using rule 6 (expression -> string_expression .) ]
  ! LBRACK          [ reduce using rule 6 (expression -> string_expression .) ]


state 7

    (29) list -> LBRACK . list_item RBRACK
    (30) list -> LBRACK . RBRACK
    (31) list_item -> . list_item COMMA list_item
    (32) list_item -> . expression
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    RBRACK          shift and go to state 38
    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 14
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 39
    string_expression              shift and go to state 6
    list_item                      shift and go to state 37

state 8

    (17) expression -> NOT . expression
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 14
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 40
    string_expression              shift and go to state 6

state 9

    (34) string_expression -> STRING .

    LBRACK          reduce using rule 34 (string_expression -> STRING .)
    IN              reduce using rule 34 (string_expression -> STRING .)
    PLUS            reduce using rule 34 (string_expression -> STRING .)
    MINUS           reduce using rule 34 (string_expression -> STRING .)
    MULT            reduce using rule 34 (string_expression -> STRING .)
    DIVIDE          reduce using rule 34 (string_expression -> STRING .)
    MODULO          reduce using rule 34 (string_expression -> STRING .)
    EXP             reduce using rule 34 (string_expression -> STRING .)
    FLDIV           reduce using rule 34 (string_expression -> STRING .)
    AND             reduce using rule 34 (string_expression -> STRING .)
    OR              reduce using rule 34 (string_expression -> STRING .)
    LESST           reduce using rule 34 (string_expression -> STRING .)
    GREATERT        reduce using rule 34 (string_expression -> STRING .)
    LESSEQ          reduce using rule 34 (string_expression -> STRING .)
    GREATEREQ       reduce using rule 34 (string_expression -> STRING .)
    EQUALTO         reduce using rule 34 (string_expression -> STRING .)
    NOTEQ           reduce using rule 34 (string_expression -> STRING .)
    RBRACK          reduce using rule 34 (string_expression -> STRING .)
    COMMA           reduce using rule 34 (string_expression -> STRING .)
    VARNAME         reduce using rule 34 (string_expression -> STRING .)
    LCURL           reduce using rule 34 (string_expression -> STRING .)
    NOT             reduce using rule 34 (string_expression -> STRING .)
    LPAREN          reduce using rule 34 (string_expression -> STRING .)
    NUMBER          reduce using rule 34 (string_expression -> STRING .)
    STRING          reduce using rule 34 (string_expression -> STRING .)
    RCURL           reduce using rule 34 (string_expression -> STRING .)
    RPAREN          reduce using rule 34 (string_expression -> STRING .)
    $end            reduce using rule 34 (string_expression -> STRING .)
    SEMI            reduce using rule 34 (string_expression -> STRING .)


state 10

    (25) expression -> NUMBER .

    PLUS            reduce using rule 25 (expression -> NUMBER .)
    MINUS           reduce using rule 25 (expression -> NUMBER .)
    MULT            reduce using rule 25 (expression -> NUMBER .)
    DIVIDE          reduce using rule 25 (expression -> NUMBER .)
    MODULO          reduce using rule 25 (expression -> NUMBER .)
    EXP             reduce using rule 25 (expression -> NUMBER .)
    FLDIV           reduce using rule 25 (expression -> NUMBER .)
    AND             reduce using rule 25 (expression -> NUMBER .)
    OR              reduce using rule 25 (expression -> NUMBER .)
    LESST           reduce using rule 25 (expression -> NUMBER .)
    GREATERT        reduce using rule 25 (expression -> NUMBER .)
    LESSEQ          reduce using rule 25 (expression -> NUMBER .)
    GREATEREQ       reduce using rule 25 (expression -> NUMBER .)
    EQUALTO         reduce using rule 25 (expression -> NUMBER .)
    NOTEQ           reduce using rule 25 (expression -> NUMBER .)
    IN              reduce using rule 25 (expression -> NUMBER .)
    RBRACK          reduce using rule 25 (expression -> NUMBER .)
    COMMA           reduce using rule 25 (expression -> NUMBER .)
    VARNAME         reduce using rule 25 (expression -> NUMBER .)
    LCURL           reduce using rule 25 (expression -> NUMBER .)
    NOT             reduce using rule 25 (expression -> NUMBER .)
    LPAREN          reduce using rule 25 (expression -> NUMBER .)
    NUMBER          reduce using rule 25 (expression -> NUMBER .)
    STRING          reduce using rule 25 (expression -> NUMBER .)
    LBRACK          reduce using rule 25 (expression -> NUMBER .)
    $end            reduce using rule 25 (expression -> NUMBER .)
    RPAREN          reduce using rule 25 (expression -> NUMBER .)
    RCURL           reduce using rule 25 (expression -> NUMBER .)
    SEMI            reduce using rule 25 (expression -> NUMBER .)


state 11

    (5) statement -> LCURL . statements RCURL
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . VARNAME EQUALS expression SEMI
    (4) statement -> . expression
    (5) statement -> . LCURL statements RCURL
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    VARNAME         shift and go to state 3
    LCURL           shift and go to state 11
    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 5
    string_expression              shift and go to state 6
    statement                      shift and go to state 4
    statements                     shift and go to state 41

state 12

    (0) S' -> statements .



state 13

    (27) expression -> list LBRACK . expression RBRACK
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 14
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 42
    string_expression              shift and go to state 6

state 14

    (26) expression -> VARNAME .

    PLUS            reduce using rule 26 (expression -> VARNAME .)
    MINUS           reduce using rule 26 (expression -> VARNAME .)
    MULT            reduce using rule 26 (expression -> VARNAME .)
    DIVIDE          reduce using rule 26 (expression -> VARNAME .)
    MODULO          reduce using rule 26 (expression -> VARNAME .)
    EXP             reduce using rule 26 (expression -> VARNAME .)
    FLDIV           reduce using rule 26 (expression -> VARNAME .)
    AND             reduce using rule 26 (expression -> VARNAME .)
    OR              reduce using rule 26 (expression -> VARNAME .)
    LESST           reduce using rule 26 (expression -> VARNAME .)
    GREATERT        reduce using rule 26 (expression -> VARNAME .)
    LESSEQ          reduce using rule 26 (expression -> VARNAME .)
    GREATEREQ       reduce using rule 26 (expression -> VARNAME .)
    EQUALTO         reduce using rule 26 (expression -> VARNAME .)
    NOTEQ           reduce using rule 26 (expression -> VARNAME .)
    IN              reduce using rule 26 (expression -> VARNAME .)
    RBRACK          reduce using rule 26 (expression -> VARNAME .)
    COMMA           reduce using rule 26 (expression -> VARNAME .)
    VARNAME         reduce using rule 26 (expression -> VARNAME .)
    LCURL           reduce using rule 26 (expression -> VARNAME .)
    NOT             reduce using rule 26 (expression -> VARNAME .)
    LPAREN          reduce using rule 26 (expression -> VARNAME .)
    NUMBER          reduce using rule 26 (expression -> VARNAME .)
    STRING          reduce using rule 26 (expression -> VARNAME .)
    LBRACK          reduce using rule 26 (expression -> VARNAME .)
    $end            reduce using rule 26 (expression -> VARNAME .)
    RPAREN          reduce using rule 26 (expression -> VARNAME .)
    RCURL           reduce using rule 26 (expression -> VARNAME .)
    SEMI            reduce using rule 26 (expression -> VARNAME .)


state 15

    (24) expression -> LPAREN expression . RPAREN
    (8) expression -> expression . PLUS expression
    (9) expression -> expression . MINUS expression
    (10) expression -> expression . MULT expression
    (11) expression -> expression . DIVIDE expression
    (12) expression -> expression . MODULO expression
    (13) expression -> expression . EXP expression
    (14) expression -> expression . FLDIV expression
    (15) expression -> expression . AND expression
    (16) expression -> expression . OR expression
    (18) expression -> expression . LESST expression
    (19) expression -> expression . GREATERT expression
    (20) expression -> expression . LESSEQ expression
    (21) expression -> expression . GREATEREQ expression
    (22) expression -> expression . EQUALTO expression
    (23) expression -> expression . NOTEQ expression
    (35) expression -> expression . IN list

    RPAREN          shift and go to state 43
    PLUS            shift and go to state 31
    MINUS           shift and go to state 22
    MULT            shift and go to state 32
    DIVIDE          shift and go to state 29
    MODULO          shift and go to state 27
    EXP             shift and go to state 33
    FLDIV           shift and go to state 24
    AND             shift and go to state 30
    OR              shift and go to state 25
    LESST           shift and go to state 19
    GREATERT        shift and go to state 21
    LESSEQ          shift and go to state 26
    GREATEREQ       shift and go to state 23
    EQUALTO         shift and go to state 20
    NOTEQ           shift and go to state 18
    IN              shift and go to state 28


state 16

    (3) statement -> VARNAME EQUALS . expression SEMI
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 14
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 44
    string_expression              shift and go to state 6

state 17

    (2) statements -> statement statements .

    $end            reduce using rule 2 (statements -> statement statements .)
    RCURL           reduce using rule 2 (statements -> statement statements .)


state 18

    (23) expression -> expression NOTEQ . expression
    (6) expression -> . string_expression
    (7) expression -> . list
    (8) expression -> . expression PLUS expression
    (9) expression -> . expression MINUS expression
    (10) expression -> . expression MULT expression
    (11) expression -> . expression DIVIDE expression
    (12) expression -> . expression MODULO expression
    (13) expression -> . expression EXP expression
    (14) expression -> . expression FLDIV expression
    (15) expression -> . expression AND expression
    (16) expression -> . expression OR expression
    (17) expression -> . NOT expression
    (18) expression -> . expression LESST expression
    (19) expression -> . expression GREATERT expression
    (20) expression -> . expression LESSEQ expression
    (21) expression -> . expression GREATEREQ expression
    (22) expression -> . expression EQUALTO expression
    (23) expression -> . expression NOTEQ expression
    (24) expression -> . LPAREN expression RPAREN
    (25) expression -> . NUMBER
    (26) expression -> . VARNAME
    (27) expression -> . list LBRACK expression RBRACK
    (28) expression -> . string_expression LBRACK expression RBRACK
    (35) expression -> . expression IN list
    (36) expression -> . string_expression IN string_expression
    (33) string_expression -> . string_expression PLUS string_expression
    (34) string_expression -> . STRING
    (29) list -> . LBRACK list_item RBRACK
    (30) list -> . LBRACK RBRACK

    NOT             shift and go to state 8
    LPAREN          shift and go to state 2
    NUMBER          shift and go to state 10
    VARNAME         shift and go to state 14
    STRING          shift and go to state 9
    LBRACK          shift and go to state 7

    list                           shift and go to state 1
    expression                     shift and go to state 45
    string_expression              shift and go to state 6

state 19
